--- a/src/main/resources/templates/basket/basket.html
+++ b/src/main/resources/templates/basket/basket.html
@@ -37,7 +37,7 @@
                             <form th:action="@{/api/booking-dish/delete/{id}(id=${bookingDish.id})}"
                                   th:method="delete">
                                 <button style="border: 0; background: 0" id="remove" type="submit">
-                                    <img src="../../static/remove.png" th:src="@{/remove.png}" alt="" width="14"
+                                    <img src="../../static/images/remove.png" th:src="@{/images/remove.png}" alt="" width="14"
                                          height="14">
                                 </button>
                             </form>
