--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -41,6 +41,9 @@
                     <li class="nav-item ">
                         <a sec:authorize="hasAuthority('ADMIN')" class="nav-link text-black" th:href="@{/api/booking/get-all/admin}">Order</a>
                     </li>
+                    <li class="nav-item ">
+                        <a class="nav-link text-black" th:href="@{/api/home/error/404}">404</a>
+                    </li>
                 </div>
             </div>
             <div class="collapse navbar-collapse justify-content-end">
