--- a/src/main/resources/templates/booking/bookingAdmin.html
+++ b/src/main/resources/templates/booking/bookingAdmin.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/category.css">
     <link rel="stylesheet" href="/css/background.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 
 <body>
-
 <div id="menu" th:insert="home :: menu_fragment"></div>
 
 <div class="container-xl">
