--- a/src/main/resources/templates/booking/booking.html
+++ b/src/main/resources/templates/booking/booking.html
@@ -6,10 +6,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>YummyFood</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 
 <body>
-
 <div id="menu" th:insert="home :: menu_fragment"></div>
 
 <div class="breadcrumb-content text-center mt-lg-5">
