--- a/src/main/resources/templates/dish/dish.html
+++ b/src/main/resources/templates/dish/dish.html
@@ -2,15 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org" lang="en">
 
-<head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>YummyFood</title>
-    <link rel="stylesheet" href="/css/background.css">
-</head>
+<head th:insert="home :: head_fragment"></head>
 
 <body>
-
 <div id="menu" th:insert="home :: menu_fragment"></div>
 
 <div class="row mx-auto mt-5 ms-5 me-5 mb-5">
